--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
     </div>
   </div>
   <script src="scripts/app.js" async></script>
+  <script src="manifest.json" async></script>
 </body>
 </html>
